@startuml
class Sprite {
    + Sprite(size:Vec2)
    + WriteCell(pos:Vec2, cell:ScreenCell) : bool
}
class Animation {
    + Animation(framedurationms:int)
    + OffsetTime(offset:float) : void
    + addFrame(frame:Sprite) : void
    + GetSprite(offset:int) : Sprite?
    + AdvanceFrames(numframes:int) : void
    + Clone() : Animation
}
Sprite --> "Size" Vec2
Animation --> "Frames<Sprite>" "List`1"
@enduml
